Fix contrast issue with prominent buttons in the block editor

--- a/src/sass/partials/cl/_gutenberg.scss
+++ b/src/sass/partials/cl/_gutenberg.scss
@@ -13,6 +13,18 @@
     letter-spacing: .1rem;
   }
 
+  &.prominent {
+
+    textarea {
+      color: $white;
+    }
+
+    textarea::placeholder {
+      color: rgba(255,255,255,.5);
+    }
+
+  }
+
 }
 
 /** CARDS **/
